test/invalid/blo2.js
var y = { obj: { bla: x }, blo: x};
y.obj.bla = 2;
y.blo = 'a';
y;
